# Sunfish

./: .gitignore  AGENTS.md  DATA_SETUP.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_STEPS.txt  PLAN.md  PROMPTS_NOT_READY.md  PROMPT_CONDITIONING.md  QUICKSTART.md  README.md  README_NEW_FEATURES.md  STATUS.md  TRAINING_GUIDE.md  USAGE.md  colab_tpu_train_masked.ipynb  colab_train_masked.ipynb  convert_old_checkpoint.py  create_onnx_package.py  create_portable_demo.py  download_dataset.py  export_to_onnx.py  generate.sh  onnx_inference.py  pyproject.toml  quick_sample.sh  requirements.txt  run.sh  run_micro.sh  run_nano.sh  sample.py  sample_masked.py  setup.sh  start_training.sh  test_cfg.py  test_imports.py  test_setup.py  train.py  train_and_monitor.py  (+2 more)
.agentwire/: config.toml  glossary
config/: __init__.py  micro_config.py  model_config.py  qwen_masked_config.py
configs/: sunfish-8b-a3b.toml
configs/training/: stage05-first32-selection.json  sunfish-preemption-smoke.toml  sunfish-recovery.toml  sunfish-resume-smoke.toml  sunfish-router.toml  sunfish-smoke.toml  sunfish.py
coordination/: CHANNEL.wire  bridge.md  bridge.sh  channel.md  codex-wire-cost.md  external_tpu_review.md  third_audit_2026-07-16.md  tpu_first_run_research_2026-07-16.md  verify_findings_2026-07-16.md
data/: __init__.py  fineweb_datamodule.py  qwen_datamodule.py  simple_text.py
docs/: architecture.md  calibration_hook.md  compute_call_brief.md  data.md  parity_harness.md  post_training.md  research_agenda.md  sharding_plan.md  training.md  training_harness.md  upstream_checkpoint.md
evals/stage0/: calibration-manifest.json  parity-p1-report.json  sunfish_conversion.json
infra/colab/: sunfish_heavy_jobs.ipynb
infra/gcp/: README.md  lifecycle.json
infra/tpu/: README.md  job.env.example
models/: __init__.py  diffusion_model.py  discrete_sampler.py  masked_diffusion_lm.py  schedulers.py
reference/tpu-docs/: README.md  data-loading.md  jax-multihost.md  orbax-distributed.md  tpu-pod-launch.md
reference/upstream/: README.md  audit.json  audit_rules.json  config.json  model-00001-of-00011.safetensors  model-00002-of-00011.safetensors  model-00003-of-00011.safetensors  model-00004-of-00011.safetensors  model-00005-of-00011.safetensors  model-00006-of-00011.safetensors  model-00007-of-00011.safetensors  model-00008-of-00011.safetensors  model-00009-of-00011.safetensors  model-00010-of-00011.safetensors  model-00011-of-00011.safetensors
scripts/: assemble_calibration.py  bootstrap_parity.sh  bootstrap_seed_cpu.sh  bootstrap_tpu.sh  bootstrap_tpu_controller.sh  build_tpu_offline_bundle.sh  check_tpu_release_safety.py  controller_attached_launch.py  deploy_tpu_offline_bundle.sh  host_log_relay.py  interrupt_training_attempt.sh  kill_tpu_attempt.sh  launch_tpu_pod.sh  preflight_tpu_controller.sh  probe_tpu_worker_base.sh  require_durable_controller.sh  source_tree_digest.py  tpu_host_entrypoint.sh  tpu_iap.sh  upload_tpu_configs.sh  verify_tpu_bundled_runtime.sh
src/sunfish/: __init__.py  calibration_records.py  checkpoint_audit.py  checkpoint_convert.py  datashards.py  expert_selection.py  model_budget.py  parity_p1.py  router_stats.py  sampling.py  source_tree.py
src/sunfish_tpu/: __init__.py  calibration.py  calibration_data_inventory.py  calibration_runner.py  checkpoint_smoke.py  deployment_config.py  exact_process_interrupt.py  gcs_inventory.py  input_smoke.py  kauldron_launch.py  offline_bundle.py  orbax_seed.py  parity.py  parity_dependencies.py  parity_evidence.py  pid_publish_gate.py  preemption_gate.py  readiness_ledger.py  real_resume_smoke.py  reconstruction_drain.py  reconstruction_gate.py  reconstruction_inventory.py  runtime_api_audit.py  runtime_provenance.py  seed_load_smoke.py  seed_manifest.py  smoke_evidence.py  source_identity.py  stage1_contract.py  standalone_runtime.py  teacher_sharding.py  topology_smoke.py  tpu_preflight.py  upload_transaction.py  worker_hygiene.py
src/sunfish_tpu/training/: __init__.py  checkpoint.py  data.py  dependencies.py  hbm_policy.py  kauldron_config.py  lora.py  losses.py  metrics.py  model.py  pack_records.py  packing.py  prefix_amortized.py  readiness_writer.py  record_format.py  remat.py  (+5 more)
sunfish_demo_6k/: README.md  demo.py  requirements.txt  sample.py
sunfish_demo_6k/config/: __init__.py  model_config.py  nano_config.py  tiny_config.py
sunfish_demo_6k/models/: __init__.py  diffusion_transformer.py  schedulers.py
sunfish_onnx_deploy/: README.md  config.json  inference.py  requirements.txt
tests/: test_calibration_core.py  test_calibration_data_inventory.py  test_calibration_records.py  test_calibration_runner.py  test_checkpoint_audit.py  test_checkpoint_convert.py  test_checkpoint_smoke.py  test_datashards.py  test_deployment_config.py  test_exact_process_interrupt.py  test_expert_selection.py  test_gcs_inventory.py  test_host_log_relay.py  test_input_smoke.py  test_kauldron_launch.py  test_model_budget.py  test_offline_bundle.py  test_orbax_seed.py  test_pack_training_records.py  test_parity_evidence.py  test_parity_harness.py  test_parity_prompts.py  test_pid_publish_gate.py  test_preemption_gate.py  test_readiness_ledger.py  test_real_resume_smoke.py  test_reconstruction_drain.py  test_reconstruction_gate.py  test_reconstruction_inventory.py  test_runtime_api_audit.py  test_sampling.py  test_seed_load_smoke.py  test_seed_manifest.py  test_smoke_evidence.py  test_source_identity.py  test_stage1_contract.py  test_standalone_runtime.py  test_teacher_sharding.py  test_topology_smoke.py  test_tpu_dependencies.py  (+12 more)
tests/fixtures/: generate_parity_prompts.py  parity_prompts.json
utils/: __init__.py  helpers.py
