[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sunfish-diffusion"
version = "0.1.0"
description = "Research tooling for the Sunfish coding-first diffusion language model"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "SculptorAI" }]
dependencies = []

[project.optional-dependencies]
# Keep checkpoint conversion dependency-free. The TPU group follows the
# compatibility lock in requirements-tpu.lock. Install it on TPU VMs, not on
# deployment hosts. Keep every direct requirement exact here as well so an
# accidental `pip install .[tpu]` cannot float the training stack.
tpu = [
  "dialog==1.1.0",
  "etils[epath-gcs]==1.14.0",
  "flax==0.12.7",
  "gemma @ git+https://github.com/google-deepmind/gemma.git@09e7b48ae88720f6236b8266c7213eb51bb62b87",
  "google-cloud-storage==3.12.1",
  "grain==0.2.18",
  "hackable-diffusion==1.0.1",
  "jax[tpu]==0.10.2",
  "jaxlib==0.10.2",
  "kauldron==1.4.4",
  "libtpu==0.0.42.1",
  "numpy==2.4.6",
  "optax==0.2.8",
  "orbax-checkpoint==0.12.1",
  "sentencepiece==0.2.1",
]
download = ["huggingface-hub>=0.34"]
dev = []

[project.scripts]
sunfish-audit = "sunfish.checkpoint_audit:main"
sunfish-checkpoint-smoke = "sunfish_tpu.checkpoint_smoke:main"
sunfish-convert = "sunfish.checkpoint_convert:main"
sunfish-kauldron = "sunfish_tpu.kauldron_launch:main"
sunfish-pack-training-records = "sunfish_tpu.training.pack_records:main"
sunfish-train = "sunfish_tpu.training.train:main"
sunfish-tpu-preflight = "sunfish_tpu.tpu_preflight:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
